# sphinxdoc

./: .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml
source/: conf.py  index.rst
