[project]
name = "sphinxdoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.1",
    "sphinx-rtd-theme>=1.4",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5"
]
